--- a/package.json
+++ b/package.json
@@ -4,11 +4,34 @@
   "description": "get blogs from social media platforms",
   "main": "lib/index.js",
   "scripts": {
-    "test": "jest"
+    "build": "tsup",
+    "dev": "tsup --watch",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "lint": "eslint . --cache --ext js,jsx,cjs,mjs,ts,tsx,md --quiet",
+    "prettier": "prettier . \"!**/*.{js,jsx,cjs,mjs,ts,tsx}\" --cache",
+    "prettier:ci": "npm run prettier --check",
+    "format": "npm run prettier --write"
   },
   "keywords": [
-    "blogs", "articles", "social media", "posts", "medium", "dev.to", "hashnode"
+    "blogs",
+    "articles",
+    "social media",
+    "posts",
+    "medium",
+    "dev.to",
+    "hashnode"
   ],
   "author": "Madan Lal <iammadanlalmali@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.4.2",
+    "ts-jest": "^29.2.5",
+    "tsup": "^8.3.5",
+    "typescript": "^5.7.2"
+  }
 }
