--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "tsup --watch",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "lint": "eslint . --cache --ext js,jsx,cjs,mjs,ts,tsx,md --quiet",
     "prettier": "prettier . \"!**/*.{js,jsx,cjs,mjs,ts,tsx}\" --cache",
     "prettier:ci": "npm run prettier --check",
