--- a/package.json
+++ b/package.json
@@ -1,9 +1,21 @@
 {
   "name": "getblogs",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "get blogs from social media platforms",
-  "main": "./dist/index.js",
+  "type": "module",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "exports": {
+    "import": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    },
+    "require": {
+      "types": "./dist/index.d.cts",
+      "require": "./dist/index.cjs"
+    }
+  },
   "files": [
     "dist"
   ],
@@ -38,5 +50,9 @@
     "ts-jest": "^29.2.5",
     "tsup": "^8.3.5",
     "typescript": "^5.7.2"
+  },
+  "repository": "iamadanlal/getblogs",
+  "bugs": {
+    "url": "https://github.com/iamadanlal/getblogs/issues"
   }
 }
